# week1_project

./: CMakeLists.txt  main.cpp
include/: ans_handler.hpp  my_math.hpp
src/: ans_handler.cpp  my_math.cpp
